<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.gms.maps.MapView
        android:id="@+id/google_map_aceptar_orden"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context="com.example.styledmap.MapsActivityRaw" />


    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/fragment_home_linear"
            android:layout_width="389dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">


                        <TextView
                            android:id="@+id/fragment_orden_GANANCIA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="S/.200.00"
                            android:textColor="@android:color/transparent"
                            android:textSize="35sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">


                        <TextView
                            android:id="@+id/fragment_orden_DISTANCIA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="4 km"
                            android:textColor="@android:color/transparent"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">


                        <TextView
                            android:id="@+id/fragment_orden_TIEMPO"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FFFFFF"
                            android:textSize="25sp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="10sp" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center">


                        <TextView
                            android:id="@+id/fragment_orden_ORIGEN"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:textColor="#FFFFFF" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center">


                        <TextView
                            android:id="@+id/fragment_orden_DESTINO"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:gravity="start"
                            android:textColor="#FFFFFF" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <Button
                        android:id="@+id/fragment_orden_ACEPTAR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>

    <Button
        android:id="@+id/fragment_home_button_ESTADO_REPARTIDOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/home_fragment_border_desactivado"
        android:padding="12dp"
        android:text="Desactivado"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
    android:id="@+id/cardview_IMAGEN_REPARTIDOR"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="24dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/fragment_home_IMAGEN_REPARTIDOR"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

</androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_BILLETERA"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="20dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/greenLigth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:background="@drawable/wallet1"
            android:backgroundTint="@color/green"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp"

            android:scaleType="fitXY" />

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/change_state_repartidor"
        android:background="#7f000000"
        android:gravity="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/fragment_home_linear_deuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border_cuenta_bloqueada"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/bloquear" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SubtitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/mensaje_cuenta_bloqueada"
                    android:textColor="#E78383" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_alert" />

                    <TextView
                        style="@style/SubtitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:text="Mas informacion"
                        android:textColor="#E78383" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_home_linear_desactivado"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/step1_border_alternative"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_action_location" />

            <TextView
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/mensaje_disponible"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_home_linear_espera"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/step1_border_alternative"
            android:gravity="center"
            android:orientation="horizontal">


            <ProgressBar
                android:id="@+id/progressbar_pedido"
                android:indeterminateTint="@color/white"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/textView_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/mensaje_espera"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>



    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>